--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.46.0",
     "react-router-dom": "^7.1.3",
+    "react-sparklines": "^1.7.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
