Improve JSON creation in GnmiClient for Influx

--- a/docker/telegraf.conf
+++ b/docker/telegraf.conf
@@ -1,5 +1,5 @@
 [agent]
-  interval = "1s"
+  interval = "500ms"
   debug = true
   quiet = false
 
@@ -10,14 +10,16 @@
   data_format = "json"
 
   name_override = "network_interface"
-  
 
   tag_keys = ["hostname", "interface_name", "ip"]
-  
+
+  json_time_key = "timestamp"
+  json_time_format = "2006-01-02T15:04:05.999999999Z07:00"
+
 
   json_string_fields = [
     "interface_data_admin-state",
-    "interface_data_oper-state", 
+    "interface_data_oper-state",
     "interface_data_last-change",
     "interface_data_loopback-mode",
     "interface_data_forwarding-mode",
@@ -31,82 +33,9 @@
     "interface_data_subinterface_0_ipv4_address_0_status",
     "interface_data_subinterface_0_ipv4_srl_nokia-interfaces-nbr:arp_neighbor_0_link-layer-address",
     "interface_data_subinterface_0_ipv4_srl_nokia-interfaces-nbr:arp_neighbor_0_expiration-time",
-    
-  ]
-  
 
-  [[processors.converter]]
-  namepass = ["network_interface"]
-  [processors.converter.fields]
-    integer = [
-      "interface_data_ifindex",
-      "interface_data_ethernet_lacp-port-priority",
-      "interface_data_ethernet_hold-time_up",
-      "interface_data_ethernet_hold-time_down",
-      "interface_data_subinterface_0_index",
-      "interface_data_subinterface_0_ip-mtu",
-      "interface_data_subinterface_0_ifindex",
-      "interface_data_subinterface_0_ipv4_srl_nokia-interfaces-nbr:arp_timeout",
-      "interface_data_subinterface_0_ipv6_srl_nokia-interfaces-nbr:neighbor-discovery_reachable-time",
-      "interface_data_subinterface_0_ipv6_srl_nokia-interfaces-nbr:neighbor-discovery_stale-time",
-      "interface_data_subinterface_0_ipv6_srl_nokia-interfaces-router-adv:router-advertisement_router-role_current-hop-limit",
-      "interface_data_subinterface_0_ipv6_srl_nokia-interfaces-router-adv:router-advertisement_router-role_max-advertisement-interval",
-      "interface_data_subinterface_0_ipv6_srl_nokia-interfaces-router-adv:router-advertisement_router-role_min-advertisement-interval",
-      "interface_data_subinterface_0_ipv6_srl_nokia-interfaces-router-adv:router-advertisement_router-role_router-lifetime",
-      "interface_data_statistics_in-packets",
-      "interface_data_statistics_in-octets",
-      "interface_data_statistics_in-unicast-packets",
-      "interface_data_statistics_in-broadcast-packets",
-      "interface_data_statistics_in-multicast-packets",
-      "interface_data_statistics_in-discarded-packets",
-      "interface_data_statistics_in-error-packets",
-      "interface_data_statistics_in-fcs-error-packets",
-      "interface_data_statistics_out-packets",
-      "interface_data_statistics_out-octets",
-      "interface_data_statistics_out-mirror-octets",
-      "interface_data_statistics_out-unicast-packets",
-      "interface_data_statistics_out-broadcast-packets",
-      "interface_data_statistics_out-multicast-packets",
-      "interface_data_statistics_out-discarded-packets",
-      "interface_data_statistics_out-error-packets",
-      "interface_data_statistics_out-mirror-packets",
-      "interface_data_statistics_carrier-transitions",
-      "interface_data_traffic-rate_in-bps",
-      "interface_data_traffic-rate_out-bps",
-      "interface_data_ethernet_statistics_in-mac-pause-frames",
-      "interface_data_ethernet_statistics_in-oversize-frames",
-      "interface_data_ethernet_statistics_in-jabber-frames",
-      "interface_data_ethernet_statistics_in-fragment-frames",
-      "interface_data_ethernet_statistics_in-crc-error-frames",
-      "interface_data_ethernet_statistics_out-mac-pause-frames",
-      "interface_data_ethernet_statistics_in-64b-frames",
-      "interface_data_ethernet_statistics_in-65b-to-127b-frames",
-      "interface_data_ethernet_statistics_in-128b-to-255b-frames",
-      "interface_data_ethernet_statistics_in-256b-to-511b-frames",
-      "interface_data_ethernet_statistics_in-512b-to-1023b-frames",
-      "interface_data_ethernet_statistics_in-1024b-to-1518b-frames",
-      "interface_data_ethernet_statistics_in-1519b-or-longer-frames",
-      "interface_data_ethernet_statistics_out-64b-frames",
-      "interface_data_ethernet_statistics_out-65b-to-127b-frames",
-      "interface_data_ethernet_statistics_out-128b-to-255b-frames",
-      "interface_data_ethernet_statistics_out-256b-to-511b-frames",
-      "interface_data_ethernet_statistics_out-512b-to-1023b-frames",
-      "interface_data_ethernet_statistics_out-1024b-to-1518b-frames",
-      "interface_data_ethernet_statistics_out-1519b-or-longer-frames",
-      "interface_data_subinterface_0_statistics_in-packets",
-      "interface_data_subinterface_0_statistics_in-octets",
-      "interface_data_subinterface_0_statistics_in-discarded-packets",
-      "interface_data_subinterface_0_statistics_in-forwarded-packets",
-      "interface_data_subinterface_0_statistics_in-forwarded-octets",
-      "interface_data_subinterface_0_statistics_in-matched-ra-packets",
-      "interface_data_subinterface_0_statistics_out-forwarded-packets",
-      "interface_data_subinterface_0_statistics_out-forwarded-octets",
-      "interface_data_subinterface_0_statistics_out-originated-packets",
-      "interface_data_subinterface_0_statistics_out-originated-octets",
-      "interface_data_subinterface_0_statistics_out-discarded-packets",
-      "interface_data_subinterface_0_statistics_out-packets",
-      "interface_data_subinterface_0_statistics_out-octets"
-    ]
+  ]
+
 
 
 [[outputs.influxdb_v2]]
@@ -115,5 +44,5 @@
   organization = "myorg"
   bucket = "infldb"
 
-[[outputs.file]]
-  files = ["stdout"]
+# [[outputs.file]]
+#   files = ["stdout"]
