Add transmission of gnmi statistics to influxdb

--- a/docker/telegraf.conf
+++ b/docker/telegraf.conf
@@ -8,18 +8,18 @@
   topics = ["gnmi_data"]
   offset = "newest"
   data_format = "json"
-
+  
   name_override = "network_interface"
-
+  
   tag_keys = ["hostname", "interface_name", "ip"]
 
   json_time_key = "timestamp"
   json_time_format = "2006-01-02T15:04:05.999999999Z07:00"
-
+  
 
   json_string_fields = [
     "interface_data_admin-state",
-    "interface_data_oper-state",
+    "interface_data_oper-state", 
     "interface_data_last-change",
     "interface_data_loopback-mode",
     "interface_data_forwarding-mode",
@@ -33,10 +33,22 @@
     "interface_data_subinterface_0_ipv4_address_0_status",
     "interface_data_subinterface_0_ipv4_srl_nokia-interfaces-nbr:arp_neighbor_0_link-layer-address",
     "interface_data_subinterface_0_ipv4_srl_nokia-interfaces-nbr:arp_neighbor_0_expiration-time",
-
+    
   ]
+  
+[[inputs.kafka_consumer]]
+  brokers = ["kafka:9092"]
+  topics = ["gnmi_stats"]
+  offset = "newest"
+  data_format = "json"
+  
+  name_override = "stats"
+  
+  tag_keys = ["hostname"]
 
-
+  json_time_key = "timestamp"
+  json_time_format = "2006-01-02T15:04:05.999999999Z07:00"
+  
 
 [[outputs.influxdb_v2]]
   urls = ["http://influxdb:8086"]
